# Machine-Learning-Engineering-with-Python-Second-Edition

./: .gitignore  README.md  test-install.sh
.github/workflows/: github-actions-basic.yml
Chapter01/: mlewp-chapter01-hotfix-requirements.txt  mlewp-chapter01-hotfix.yml  mlewp-chapter01-requirements.txt  mlewp-chapter01-test.yml  mlewp-chapter01.yml  requirements.txt
Chapter01/classifying/: classify_example.py
Chapter01/clustering/: clustering_example.py  taxi-labels.json  taxi-rides.csv
Chapter01/forecasting/: forecasting_example.ipynb  forecasting_example.py  mlewp-chapter01-hotfix.yml
Chapter02/: mlewp-chapter02.yml  plot_outlier_detection_wine.py  requirements.txt  rfc.joblib  simple_classifier.py  test_model_performance.py
Chapter02/bad-git/: pipeline.py
Chapter02/ml-models/: simple_classifier.py  (+1 more)
Chapter03/: mlewp-chapter03.yml  requirements.txt
Chapter04/: logging_example.py
Chapter04/my-ml-package/: pyproject.toml
Chapter05/: mlewp-chapter05-mwaa.yml  mlewp-chapter05.yml
Chapter05/going_with_the_kubeflow/: pyproject.toml
Chapter05/going_with_the_kubeflow/going_with_the_kubeflow/: deploy_kubeflow_pipelines.zsh  kfp_port_forward.zsh  pipeline_basic.py  pipeline_basic_v1.py
Chapter05/reaching_zen/: pyproject.toml
Chapter05/reaching_zen/reaching_zen/: .copier-answers.yml  LICENSE  __init__.py  run.py
Chapter05/reaching_zen/reaching_zen/.zen/: config.yaml
Chapter05/reaching_zen/reaching_zen/artifacts/: __init__.py  model_metadata.py
Chapter05/reaching_zen/reaching_zen/materializers/: __init__.py  model_metadata.py
Chapter05/reaching_zen/reaching_zen/pipelines/: __init__.py  model_training.py
Chapter05/reaching_zen/reaching_zen/steps/: __init__.py  data_loaders.py  model_trainers.py
Chapter06/: README.md  mlewp-chapter06.yml  requirements.txt
Chapter06/llms-langchain/: pyproject.toml
Chapter06/llms-langchain/llms_langchain/: gpt3-turbo-example.py
Chapter06/mlewp2-ray/: pyproject.toml
Chapter06/mlewp2-ray/mlewp2_ray/: getting_started_with_ray.ipynb  getting_started_with_ray_xgboost.ipynb  ray_air_basic.py  ray_air_basic_trainer.py
Chapter07/: mlewp-chapter07.yml  requirements.txt
Chapter08/: README.md  mlewp-chapter08.yml  mlflow.db  requirements.txt
Chapter09/: configure_aws.zsh  mlewp-chapter09.yml  requirements.txt
environments/: mleip-pd-udf.yml  mleng-environment.yml  mleng-mac-environment.yml  mleng-spark3-ch6.yml
(+206 files in other folders)
