[tool.poetry]
name = "going-with-the-kubeflow"
version = "0.1.0"
description = ""
authors = ["andymc629 <andrewpmcmahon629@gmail.com>"]
readme = "README.md"
packages = [{include = "going_with_the_kubeflow"}]

[tool.poetry.dependencies]
python = "^3.9"
kfp = "^1.8.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
