[tool.poetry]
name = "reaching-zen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "reaching_zen"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
zenml = {extras = ["templates"], version = "^0.33.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
